@@ -2,6 +2,9 @@
 
 - Fixed a typo in the hstrerror() function.
 
+- The common error reporting function __show_error() could throw Enforcer
+  hits if the program was not launched from Shell. Fixed.
+
 
 c.lib 1.184 (28.11.2004)
 
